--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express-openapi": "^12.1.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.0.3",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
